# newloka

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  NewLoka_Architecture_Diagram.html  Project_Scope_and_Requirements.txt  README.md  build_improvements.js  concepts  docker-compose.yml  reqdocs.js  rustfmt.toml  server_err.txt  srv_err.txt
.github/workflows/: ci.yml
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPER.md  FAQ.md  GLOSSARY.md  OPENAPI.yaml  SECURITY.md
newloka_cli/: Cargo.toml
newloka_cli/src/: main.rs
newloka_core/: Cargo.toml
newloka_core/src/: lib.rs
newloka_core/src/abac/: mod.rs
newloka_core/src/audit/: mod.rs
newloka_core/src/cpoe/: mod.rs
newloka_core/src/crypto/: mod.rs
newloka_core/src/fhir/: mod.rs
newloka_core/src/identity/: mod.rs
newloka_core/src/storage/: mod.rs
newloka_core/src/sync/: mod.rs
newloka_core/tests/: integration_tests.rs  unit_tests.rs
newloka_server/: Cargo.toml  build.rs
newloka_server/src/: demo.rs  lib.rs  main.rs  state.rs
newloka_server/tests/: server_tests.rs
newloka_web/: index.html
newloka_web/css/: styles.css
newloka_web/js/: api.js  app.js  config.js  mock-data.js  themes.js
scripts/: backup.sh  health-check.ps1  setup-node.sh
src/: main.rs
test/: README.md  unit_tests.rs
