[workspace]
members = ["newloka_core", "newloka_cli", "newloka_server"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["New Loka Contributors"]
license = "GPL-3.0"
repository = "https://github.com/newloka/newloka"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
sha2 = "0.10"
aes-gcm = "0.10"
rand = "0.8"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
argon2 = "0.5"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "migrate"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.4", features = ["derive"] }
