[package]
name = "newloka_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "newloka"
path = "src/main.rs"

[dependencies]
newloka_core = { path = "../newloka_core" }
newloka_server = { path = "../newloka_server" }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
