[package]
name = "newloka_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
aes-gcm = { workspace = true }
rand = { workspace = true }
rand_core = "0.6"
ed25519-dalek = { workspace = true }
argon2 = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
