[package]
name = "newloka_server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "newloka-server"
path = "src/main.rs"

[features]
default = ["demo"]
demo = []

[dependencies]
clap = { workspace = true }
rand = { workspace = true }
newloka_core = { path = "../newloka_core" }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true, features = ["util"] }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rust-embed = { workspace = true }


